# groundhog-researcher

./: .gitignore  README.md  checklist.md  llm_iterative_code_optimization_research.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: agent_system.md  render_mascot.py
src/groundhog/: README.md  __init__.py  cli.py
src/groundhog/acceptance/: default.py
src/groundhog/agents/: claude_code.py  copilot.py  gemini_cli.py  tool_server.py  tools.py
src/groundhog/backends/: _http.py  anthropic.py  claude_code.py  copilot.py  discover.py  gemini.py  gemini_cli.py  mock.py  openai_compat.py  opencode.py
src/groundhog/base/: __init__.py  acceptance.py  agent.py  attempt_history.py  backend.py  learnings.py  optimizer.py  strategy.py  toolkit.py  types.py
src/groundhog/histories/: folder.py
src/groundhog/learnings/: markdown.py
src/groundhog/optimizers/: simple.py
src/groundhog/strategies/: agent.py  analyse.py  cross_pollinate.py  fresh.py  improve.py
src/groundhog/templates/: backend.py  basic.py  llm_guide.py  mnist_task.py  mock_strategy.py  mock_task.py  strategy.py
src/groundhog/tools/: conversation_log.py  cost_estimate.py  log.py  queue.py
src/groundhog/utils/: codegen.py  results.py  selection.py  subprocess_runner.py
tests/: test_agent_concepts.py  test_concepts.py
tests/e2e_mnist_agent/: task.py
