[project]
name = "groundhog-researcher"
version = "0.2.6"
description = "LLM-powered iterative function optimization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["llm", "optimization", "iteration", "code-generation", "ai", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "python-dotenv",
]

[project.scripts]
groundhog = "groundhog.cli:main"
ghg = "groundhog.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/groundhog"]

[project.urls]
Homepage = "https://github.com/frizzerdk/groundhog-researcher"
Repository = "https://github.com/frizzerdk/groundhog-researcher"
Issues = "https://github.com/frizzerdk/groundhog-researcher/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
